# ollamacode

./: .gitignore  AUR-SUBMISSION.md  README.md  default.md  logger.py  main.py  ollama_client.py  ollamacode  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  tools.py  ui.py
danycode/: agent.py  cli.py  client.py  config.py  session.py  tools.py
tests/: test_ollamacode.py
