[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollamacode"
version = "0.1.0"
description = "Agentic Coding Assistant with Ollama"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31,<3",
    "rich>=13,<14",
    "selenium>=4.15,<5",
    "webdriver-manager>=4,<5",
    "duckduckgo-search>=4,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
]

[project.scripts]
ollamacode = "main:main"

[tool.setuptools]
py-modules = ["main", "ollama_client", "tools", "ui", "logger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
