[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "danycode"
version = "0.1.0"
description = "Ollama CLI coding assistant with tool calling"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "rich>=14.0",
    "typer>=0.15",
]

[project.scripts]
danycode = "danycode.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["danycode"]
